# gamerchain

./: .env.example  .gitignore  BLOCKCHAIN_FUNCIONANDO.md  BLOCKCHAIN_GENESIS_COMPLETO.md  CHANGELOG.md  CHANGELOG_PROJECT_UPDATE.md  COMMIT_LIMPIO_LISTO.md  CONFIGURACION_TESTNET_SEGURA.md  COORDINATOR_FINAL_SOLUTION.md  COORDINATOR_UPDATE_INSTRUCTIONS.md  CORRECCION_API_TRANSACCIONES.md  DISTRIBUTED_AI_NODES_STATUS_UPDATE.md  ERRORES_ARREGLADOS.md  ESTADO_ACTUAL_FAUCET.md  FAUCET_ARREGLADO.md  FEE_DISTRIBUTION_UPDATE.md  GENESIS_STATE_VALIDATION_SUMMARY.md  GUIDED_BOOTSTRAP_IMPROVEMENT.md  HALVING_FEE_REDISTRIBUTION_IMPLEMENTED.md  HISTORIAL_SOLUCIONES_COMPLETO.md  INSTALACION_WINDOWS.md  LICENSE  LIMPIEZA_ARCHIVOS_OBSOLETOS.md  MULTINODE_IMPLEMENTATION_STATUS.md  MULTINODE_README.md  Makefile  PROJECT_INFO.md  README.md  SEGURIDAD_CRITICA_SOLUCIONADA.md  SEGURIDAD_IMPLEMENTADA.md  SEGURIDAD_IP_PUBLICA_SOLUCIONADA.md  SEGURIDAD_REPOSITORIO.md  SISTEMA_INTEGRADO_COMPLETO.md  SISTEMA_MULTINODE_COMPLETO.md  SOLUCION_API_WALLET.md  SOLUCION_COMPLETA_API.md  SOLUCION_CONEXION_NODOS_V2.md  SOLUCION_FINAL_WALLET_API.md  WALLET_ELECTRON_FUNCIONANDO.md  api_final.py  (+55 more)
config/: __init__.py  config.py  default.yaml
data/: blockchain.json  developer_recovery.json  genesis_block.json  net_map.json  node_id.txt
docs/: DEVELOPMENT_HISTORY.md  DeFi_Implementation_Summary.md  Fault_Tolerance_Implementation_Summary.md  Game_Integration_API.md  INSTALLATION_GUIDE.md  Integration_Summary.md  Monitoring_Implementation_Summary.md  Network_And_Quorum_Implementation.md  P2P_Network_Implementation.md  Technical_Whitepaper.md
examples/: ai_model_verification_example.py  blockchain_core_example.py  defi_integration_example.py  fault_tolerance_example.py  game_api_integration_example.py  liquidity_pool_example.py  monitoring_integration_example.py  nft_gaming_example.py  (+4 more)
(+383 files in other folders)
